# s3tp

./: .gitignore  Makefile.am  README.md  configure.ac  copying.md
doc/: s3tpc-messages.md
etc/: s3tpd.conf
s3tp/: Makefile.am  s3tp  s3tp_tool.cpp
s3tpc/: .gitignore  Makefile.am  s3tp.c  s3tp.h  s3tp_tool.c
s3tpd/: __main__.py  config.py  s3tpd.py  toolmessage.py  toolprotocol.py  util.py
s3tpd/backend/: backendbase.py  tcp.py
s3tpd/testing/: backend.py  mocking.py
